# x4-claude-toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  KNOWLEDGEBASE.md  LICENSE  README.md  SETUP_PROMPT.txt  install.ps1  install.sh  setup.sh
.claude/: settings.json  settings.local.json.example  x4-paths.env.example
.claude/agents/: cross-file-impact.md  mod-research.md
.claude/hooks/: _x4-env.sh  backup-before-edit.sh  check-reference-version.sh  protect-bash.sh  protect-files.sh  x4validate-on-edit.sh
.claude/skills/x4-debug/: SKILL.md
.claude/skills/x4-modlist-review/: SKILL.md
.claude/skills/x4-scaffold/: SKILL.md
.claude/skills/x4-update-mod/: SKILL.md
scripts/: generate-baseline.sh  restore-from-backup.sh
tools/x4validate/: README.md  pyproject.toml
tools/x4validate/tests/: test_check.py  test_merge.py  test_modlist.py  test_refs.py  test_update.py  test_v11.py  test_xpath.py
tools/x4validate/x4validate/: __init__.py  _check.py  _cli.py  _merge.py  _migration.py  _modlist.py  _nexus.py  _refs.py  _registry.py  _resolve.py  _xpath.py  _xsd.py
