[project]
name = "x4validate"
version = "0.1.0"
description = "X4 Foundations cross-file XML diff/reference/completeness validator"
requires-python = ">=3.13"
dependencies = ["lxml>=5.0", "ruamel.yaml>=0.18"]

[project.scripts]
x4validate = "x4validate._cli:main"
x4modlist = "x4validate._modlist:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["x4validate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
